--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "bunx --bun vite",
     "build": "tsc -b && bunx --bun vite build",
     "lint": "eslint .",
+    "format": "prettier --write .",
+    "format-check": "prettier --check .",
     "preview": "bunx --bun vite preview"
   },
   "dependencies": {
@@ -22,6 +24,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "prettier": "3.4.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
