:construction: fix ci

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -38,12 +38,15 @@ jobs:
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
+        if: ${{ !cancelled() }}
 
       - name: Upload Artifacts to GitHub Pages
         uses: actions/upload-pages-artifact@v3
+        if: ${{ !cancelled() }}
         with:
           path: ./playwright-report
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        if: ${{ !cancelled() }}
